--- a/bibliography/index.html
+++ b/bibliography/index.html
@@ -111,6 +111,19 @@
   </div>
 </div>
 
+<div class="book-item" style="margin-bottom:1rem;">
+  <img class="book-image" src="https://r2.elizen.me/2023/06/97484a04193945e44b5950674d8b68ad.png" align="left" width="200" style="margin-right:20px">
+  <div class="book-details" style="margin-left:220px;">
+    <h3 class="title">
+      <a href="" class="book-title-link">莫言短篇小说精品系列</a >
+    </h3>
+    <p class="author">莫言</p >
+    <p class="description">如果我没记错，这套系列作品是莫言自己编的，其中第二本《秋水》中有一篇《白狗秋千架》，对我影响极大，它对于社会和命运，赋予了我认为最好的诠释，除此之外，它真得在聊人性，人与人之间最本真的那一部分。</p >
+  </div>
+</div>
+<div class="clear" style="clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0;"></div>
+
+
 
 
   <footer>
