--- a/bb/index.html
+++ b/bb/index.html
@@ -98,12 +98,18 @@
     limit : '',
     creatorId:'' ,
     domId: '',
+    twiEnv:'https://metk.edui.fun/',
   }
 </script>
-<script src="https://immmmm.com/bb-lmm-mk.js"></script>
-<script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
+<script src="/twikoo1616.js"></script>
+<script src="https://unpkg.com/artalk@2/dist/ArtalkLite.js"></script>
+<script type="module" src="/emaction.js?v=2308071"></script>
+<script src="/bb-lmm-mk.js?v=230807"></script>
 
 <style>
 #bber{margin-top:2em;width:580px;}
