--- a/bb/index.html
+++ b/bb/index.html
@@ -98,13 +98,15 @@
     limit : '',
     creatorId:'' ,
     domId: '',
+    twiEnv:'https://pl.elizen.me/'
   }
 </script>
-<script src="https://immmmm.com/bb-lmm-mk.js"></script>
 <script src="https://fastly.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/ViewImage/view-image.min.js"></script>
 <script src="https://fastly.jsdelivr.net/gh/Tokinx/Lately/lately.min.js"></script>
-
+<script src="https://fastly.jsdelivr.net/npm/twikoo@1.6.16/dist/twikoo.all.min.js"></script>
+<script type="module" src="https://immmmm.com/emaction.js?v=2308071"></script>
+<script src="https://immmmm.com/bb-lmm-mk.js?v=2308071"></script>
 <style>
 #bber{margin-top:2em;width:580px;}
 #bber pre{color: #fff;}
