--- a/journal/2023-09.html
+++ b/journal/2023-09.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<title>2023-09-25 记：</title>
+		<title>二〇二三年九月</title>
 	</head>
 <body>
 
