--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <h2 id="now">Now</h2>
 <p>本来单独见了一个 Now 页面，来介绍自己最近在干嘛，给一些偶尔闲逛过来的老友一个说辞，但想想觉得多此一举，索性写在这里，不仅是对自己虚度的时光找来借口，也算是门前挂好的一副对联。</p>
 <blockquote>
-<p>~~学英语，准备试试雅思考试。~~估计考试又要被我鸽子，但是最近确实在学英语。</p>
+<p><del>学英语，准备试试雅思考试</del>。估计考试又要被我鸽子，但是最近确实在学英语。</p>
 <p>看王小波，已经读到<del>第四本《黑铁时代》</del>，第六本《黄金时代》。</p>
 <p>好奇心转移到了欧洲，想看看文明的起源究竟长个什么样子。刚进入斯巴达，还没有走出古希腊，不知道什么时候会逛到罗马。</p>
 <p>研究与大模型有关的一切，但不是研究一切大模型。</p>
